--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -25,7 +25,7 @@
             <ul class="navbar-nav">
                 <li class="logo" style="-webkit-app-region: drag">
                     <a class="nav-link">
-                        <span class="logo-text">joeldev</span>
+                        <span class="logo-text">joeldev V0.0.2-alpha</span>
 
                     </a>
                 </li>
